Fixes image overflow

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }	
 
 #slideShow {	
-	position: relative;
+	position: relative; /*to contain position: absolute children*/
 }
 
 .photoHolder {
@@ -27,6 +27,7 @@ body {
 .moreIndicator {
 	height: 50px;
 	width: 50px;
+	
 	position: relative;
 	z-index: 3;
 	opacity: .8;
@@ -37,6 +38,12 @@ body {
 .thumbnail {
 	position: relative;
 	box-shadow: 1px 3px 20px 0px;
+}
+
+#photo {
+	z-index: 1;
+	height: 389px;
+	width: 518px;
 }
 
 
@@ -50,54 +57,80 @@ body {
 	position: relative;
 }
 
-#prevPhoto {
-	height: 42px;
-	width: 42px;
-}
-
-#prevPhoto:hover{				
-	opacity:0.3;
-}
-
-
-#nextPhoto {
-	height: 42px;
-	width: 42px;
-	float: right;
-}
-#nextPhoto:hover{				
-	opacity:0.3;
-
-}
-
-
 .details p {
 	margin-top: 20px;
 }
+
 .details {
 	border: 1px #000 dashed;
 	padding: 0px 10px;
 	margin: 20px 0px;
 }
 
+#prevPhoto {
+	height: 42px;
+	width: 42px;
+}
+
+#prevPhoto:hover {
+	opacity: 0.5;
+}
+
+#nextPhoto {
+	height: 42px;
+	width: 42px;
+	
+	float: right;
+}
+
+#nextPhoto:hover {
+	opacity: 0.5;
+}
+
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot90 {
-	transform: rotate(90deg);
-	transition: all 1s ease-in-out;
-	
+	-webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    
+    /* Firefox */
+	-moz-transition: all 1s ease;
+	/* WebKit */
+	-webkit-transition: all 1s ease;
+	/* Opera */
+	-o-transition: all 1s ease;
+	/* Standard */
+	transition: all 1s ease;	
 }
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot180 {
-	transform: rotate(180deg);
-	
+	-webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot270 {
-	transform: rotate(270deg);
-	transition: all 1s ease-in-out;
+	-webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+    
+    /* Firefox */
+	-moz-transition: all 1s ease;
+	/* WebKit */
+	-webkit-transition: all 1s ease;
+	/* Opera */
+	-o-transition: all 1s ease;
+	/* Standard */
+	transition: all 1s ease;
 }
